force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <description>사원정보, 시스템사용자(User)정보와 별도의 사원 인사정보
Created By : Riddhi Mittal
Created Date: 10/21/2020
User Story:GD-715
Purpose: Basic level object</description>
    <label>Employee</label>
    <nameField>
        <label>Employee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>