force-app/main/default/objects/Employee__c/fields/BlockFlag__c.field-meta.xml
<CustomField>
    <fullName>BlockFlag__c</fullName>
    <label>Block flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>