force-app/main/default/objects/Employee__c/fields/CertificationsLicensesSummary__c.field-meta.xml
<CustomField>
    <fullName>CertificationsLicensesSummary__c</fullName>
    <description>Created By: Riddhi Mittal
Created Date: 10/21/2020
User Story: GD-715
Purpose: Basic Field of Employee</description>
    <label>Certifications &amp; Licenses Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>