force-app/main/default/objects/Employee__c/fields/Contact_details__c.field-meta.xml
<CustomField>
    <fullName>Contact_details__c</fullName>
    <label>Contact Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>