force-app/main/default/objects/Employee__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>Us- GD-1295 requirement</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>