force-app/main/default/objects/Employee__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>$User.Country</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 02/11/2030
User Story: 
Purpose :- After Sales record of Customer.</description>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>