force-app/main/default/objects/Employee__c/fields/DealerCode__c.field-meta.xml
<CustomField>
    <fullName>DealerCode__c</fullName>
    <label>Dealer Code belonging to Sales person</label>
    <length>10</length>
    <type>Text</type>
</CustomField>