force-app/main/default/objects/Employee__c/fields/EmploymentEndDate__c.field-meta.xml
<CustomField>
    <fullName>EmploymentEndDate__c</fullName>
    <description>Created By: Riddhi Mittal
Created Date: 10/21/2020
User Story: GD-715
Purpose: Basic Field of Employee</description>
    <label>Employment End Date</label>
    <type>Date</type>
</CustomField>