force-app/main/default/objects/Employee__c/fields/EmploymentStartDate__c.field-meta.xml
<CustomField>
    <fullName>EmploymentStartDate__c</fullName>
    <description>Created By: Riddhi Mittal
Created Date: 10/21/2020
User Story: GD-715
Purpose: Basic Field of Employee</description>
    <label>Employment Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>