force-app/main/default/objects/Employee__c/fields/fm_Address__c.field-meta.xml
<CustomField>
    <fullName>fm_Address__c</fullName>
    <formula>User__r.Street &amp; &quot; &quot;&amp; User__r.City &amp; &quot; &quot; &amp; User__r.PostalCode &amp; &quot; &quot; &amp; User__r.State</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>