force-app/main/default/objects/Employee__c/fields/fm_Email__c.field-meta.xml
<CustomField>
    <fullName>fm_Email__c</fullName>
    <formula>User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>