force-app/main/default/objects/Employee__c/fields/fm_Signature__c.field-meta.xml
<CustomField>
    <fullName>fm_Signature__c</fullName>
    <formula>IF ( 
ISBLANK(SignatureId__c), 
IMAGE(&quot;https://genesis--ps--c.visualforce.com/resource/1550046204000/sign_empty&quot;, &quot;Signature&quot;, 100, 200), 
IMAGE(&quot;https://genesis--ps--c.documentforce.com/servlet/servlet.FileDownload?file=&quot; + SignatureId__c + &quot;&amp;operationContext=S1&quot;, 
&quot;Signature&quot;, 
113, 
300 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature</label>
    <type>Text</type>
</CustomField>