force-app/main/default/objects/Employee__c/fields/fm_Tenure__c.field-meta.xml
<CustomField>
    <fullName>fm_Tenure__c</fullName>
    <description>Created By: Riddhi Mittal
Created Date: 10/22/2020
User Story: GD-715
Purpose: Basic Field of Employee</description>
    <formula>IF(ISNULL( EmploymentEndDate__c )
   ,TEXT(FLOOR((TODAY() - EmploymentStartDate__c) / 365)) &amp; &quot; years  &quot; &amp; TEXT(FLOOR(MOD(TODAY() - EmploymentStartDate__c , 365) / 31)) &amp; &quot; months&quot;
   ,TEXT(FLOOR((EmploymentEndDate__c - EmploymentStartDate__c) / 365)) &amp; &quot; years  &quot; &amp; TEXT(FLOOR(MOD(EmploymentEndDate__c - EmploymentStartDate__c , 365) / 31)) &amp; &quot; months&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenure</label>
    <type>Text</type>
</CustomField>