force-app/main/default/objects/Employee__c/fields/JobPosition__c.field-meta.xml
<CustomField>
    <fullName>JobPosition__c</fullName>
    <label>Sales Person job position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>