force-app/main/default/objects/Employee__c/fields/LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>LanguageCode__c</fullName>
    <description>Confirmed with Hamid</description>
    <label>Language Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>