force-app/main/default/objects/Employee__c/fields/NSC_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>NSC_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSC Contact Person</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee (NSC Contact Person)</relationshipLabel>
    <relationshipName>NSC_Contact_Person</relationshipName>
    <type>Lookup</type>
</CustomField>