force-app/main/default/objects/Employee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Us- GD-1295 requirement</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>