force-app/main/default/objects/Employee__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Created By: Riddhi Mittal
Created Date: 10/22/2020
User Story: GD-715
Purpose: Basic Field of Employee</description>
    <inlineHelpText>Thies field value will be copied into the Account Team Member Role.
The Employee within the role &quot;Store Manager&quot; becomes Account Owner for all Accounts where his department is the PreferredFacility.</inlineHelpText>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Adviser</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Service Manager</fullName>
            </value>
            <value>
                <fullName>Warranty Manager</fullName>
            </value>
            <value>
                <fullName>Insurance Manager</fullName>
            </value>
            <value>
                <fullName>Store Manager</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Test Drive Manager</fullName>
            </value>
            <value>
                <fullName>Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Inventory Manager</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
            <value>
                <fullName>Pick-up driver</fullName>
            </value>
            <value>
                <fullName>Parts Manager</fullName>
            </value>
            <value>
                <fullName>GTA</fullName>
            </value>
            <value>
                <fullName>NSC Aftersales Manager</fullName>
            </value>
            <value>
                <fullName>Department Manager</fullName>
            </value>
            <value>
                <fullName>Butler</fullName>
                <isActive>false</isActive>
                <label>Butler</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>