force-app/main/default/objects/Employee__c/fields/SalesCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>SalesCompanyCode__c</fullName>
    <label>Sales company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>