force-app/main/default/objects/Employee__c/fields/SalesPersonCode__c.field-meta.xml
<CustomField>
    <fullName>SalesPersonCode__c</fullName>
    <label>Sales Person Code</label>
    <type>AutoNumber</type>
</CustomField>