force-app/main/default/objects/Employee__c/fields/SignatureId__c.field-meta.xml
<CustomField>
    <fullName>SignatureId__c</fullName>
    <description>Signature Image ID
Created By: Riddhi Mittal
Created Date: 10/22/2020
User Story: GD-715
Purpose: Basic Field of Employee</description>
    <label>SignatureId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>