force-app/main/default/objects/Employee__c/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <description>US- 1295 requirement</description>
    <label>Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>