force-app/main/default/objects/Employee__c/fields/TrainingHistorySummary__c.field-meta.xml
<CustomField>
    <fullName>TrainingHistorySummary__c</fullName>
    <description>Created By: Riddhi Mittal
Created Date: 10/22/2020
User Story: GD-715
Purpose: Basic Field of Employee</description>
    <label>Training History Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>