force-app/main/default/objects/Employee__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Riddhi Mittal
Created Date: 10/22/2020
User Story: GD-715
Purpose: Basic Field of Employee</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee</relationshipName>
    <type>Lookup</type>
</CustomField>