force-app/main/default/objects/Employee__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>A Workflow updates this field after creating. So we&#39;re checking that each user can only has 1 Employee record.</description>
    <label>UserId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>