force-app/main/default/objects/Employee__c/fields/WechatId__c.field-meta.xml
<CustomField>
    <fullName>WechatId__c</fullName>
    <description>Created By: Riddhi Mittal
Created Date: 10/22/2020
User Story: GD-715
Purpose: Basic Field of Employee</description>
    <label>Wechat Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>