force-app/main/default/objects/Employee__c/recordTypes/AfterSales_Employee.recordType-meta.xml
<RecordType>
    <fullName>AfterSales_Employee</fullName>
    <active>true</active>
    <label>AfterSales Employee</label>
</RecordType>