force-app/main/default/objects/Employee__c/recordTypes/GTA_Employee.recordType-meta.xml
<RecordType>
    <fullName>GTA_Employee</fullName>
    <active>true</active>
    <label>GTA Employee</label>
</RecordType>