force-app/main/default/objects/Employee__c/recordTypes/NSC_Employee.recordType-meta.xml
<RecordType>
    <fullName>NSC_Employee</fullName>
    <active>true</active>
    <label>NSC Employee</label>
</RecordType>