force-app/main/default/objects/Employee__c/recordTypes/Sales_Employee.recordType-meta.xml
<RecordType>
    <fullName>Sales_Employee</fullName>
    <active>true</active>
    <label>Sales Employee</label>
</RecordType>