force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Department__c</columns>
    <columns>Role__c</columns>
    <columns>fm_Email__c</columns>
    <columns>EmploymentStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>