force-app/main/default/objects/Employee__c/listViews/All_GTA.listView-meta.xml
<ListView>
    <fullName>All_GTA</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Department__c</columns>
    <columns>Role__c</columns>
    <columns>fm_Email__c</columns>
    <columns>EmploymentStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>GTA</value>
    </filters>
    <label>All GTA</label>
</ListView>